--- a/css/styles_moonarch.css
+++ b/css/styles_moonarch.css
@@ -110,7 +110,7 @@
   z-index: 0;
   width: 1px;
   /* background: var(--moonBlueLight); */
-  border-left: thin solid #efefef;
+  border-left: thin solid #e3e3e3;
 }
 .phoneMainButton {
   justify-content: center;
